--- a/app/views/ReportView/components/PathwayAnalysis/index.scss
+++ b/app/views/ReportView/components/PathwayAnalysis/index.scss
@@ -17,7 +17,6 @@
 
 @media print {
   .pathway {
-    page-break-before: always;
     page-break-after: always;
 
     &__header {
